# rusty-brain

./: Cargo.toml
pastes/generated id/: bar.rs
src/: main.rs  types.rs
src/assets/css/: base.css  colors.css
src/templates/: base.tera  home.tera
